--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "node test.js"
   },
   "author": "",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "chai": "^5.0.0",
     "mocha": "^10.2.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   }
 }
