--- a/client/angular.json
+++ b/client/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mimiAndRuth": {
+    "GenerateGreeting": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mimi-and-riki",
+            "outputPath": "dist/GenerateGreeting",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "mimiAndRuth:build:production"
+              "browserTarget": "GenerateGreeting:build:production"
             },
             "development": {
-              "browserTarget": "mimiAndRuth:build:development"
+              "browserTarget": "GenerateGreeting:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -75,7 +75,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mimiAndRuth:build"
+            "browserTarget": "GenerateGreeting:build"
           }
         },
         "test": {
