--- a/server/package.json
+++ b/server/package.json
@@ -2,25 +2,21 @@
   "name": "ai-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node test.js"
+    "start": "node app.js",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "jest": "^27.0.0",
+    "nock": "^13.5.0",
+    "supertest": "^6.3.4"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.2",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "openai": "^4.20.1"
-  },
-  "devDependencies": {
-    "chai": "^5.0.0",
-    "mocha": "^10.2.0",
-    "nodemon": "^3.0.2",
-    "supertest": "^6.3.3"
+    "openai": "^4.24.7"
   }
 }
