--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "openai": "^4.24.7"
   }
